--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -1,72 +1,63 @@
-<div class="row">        <!-- first two days -->
-  <div class="col-md-6"> <!-- left column -->
-    <h3>Day 1</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td>Before starting</td>
-        <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-    </table>
-  </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-    </table>
-  </div>
-</div>
-<div class="row">        <!-- days 3 and 4 -->
-  <div class="col-md-6"> <!-- left column -->
-    <h3>Day 3</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-    </table>
-  </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 4</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td>End</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-    </table>
-  </div>
-</div>
+On Saturdays (with recaps on Mondays and Wednesdays and some additional sessions on other days)
+<br/>
+Working with Data (Regular Expressions)
+<a href="https://librarycarpentry.org/lc-data-intro/">https://librarycarpentry.org/lc-data-intro/</a>
+<br/>
+The Unix Shell
+<a href="http://swcarpentry.github.io/shell-novice">http://swcarpentry.github.io/shell-novice</a>
+<br/>
+Version Control with Git
+<a href="http://swcarpentry.github.io/git-novice">http://swcarpentry.github.io/git-novice</a>
+<br/>
+Programming with Python
+<a href="http://swcarpentry.github.io/python-novice-inflammation">http://swcarpentry.github.io/python-novice-inflammation</a>
+<br/>
+Plotting and Programming in Python
+<a href="http://swcarpentry.github.io/python-novice-gapminder">http://swcarpentry.github.io/python-novice-gapminder</a>
+<br/>
+Text & Data Mining
+<a href="http://librarycarpentry.org/lc-tdm">http://librarycarpentry.org/lc-tdm</a>
+<br/>
+<a href="Constellate - https://ithaka.github.io/tdm-notebooks/book/all-notebooks.html">Constellate - https://ithaka.github.io/tdm-notebooks/book/all-notebooks.html</a>
+<br/>
+<a href="HathiTrust Research Center Tools & Data - https://wiki.htrc.illinois.edu/display/COM/Getting+started">HathiTrust Research Center Tools & Data - https://wiki.htrc.illinois.edu/display/COM/Getting+started</a>
+<br/>
+Introduction to web scraping
+<a href="https://ubc-library-rc.github.io/intro-web-scraping/">https://ubc-library-rc.github.io/intro-web-scraping/</a>
+<a href="https://librarycarpentry.org/lc-webscraping">https://librarycarpentry.org/lc-webscraping</a>
+<br/>
+Programming with R
+<a href="http://swcarpentry.github.io/r-novice-inflammation">http://swcarpentry.github.io/r-novice-inflammation</a>
+<br/>
+R for Reproducible Scientific Analysis
+<a href="http://swcarpentry.github.io/r-novice-gapminder">http://swcarpentry.github.io/r-novice-gapminder</a>
+<br/>
+Intro to Conda for Data Scientists
+<a href="https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/">https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/</a>
+<br/>
+Text Processing and Parallel Processing
+<a href="https://deapsecure.gitlab.io/deapsecure-lesson01-hpc/">https://deapsecure.gitlab.io/deapsecure-lesson01-hpc/</a>
+<br/>
+Parallel Programming in Python
+<a href="https://carpentries-incubator.github.io/lesson-parallel-python/">https://carpentries-incubator.github.io/lesson-parallel-python/</a>
+<br/>
+Intro to AI for GLAM
+<a href="https://carpentries-incubator.github.io/machine-learning-librarians-archivists/">https://carpentries-incubator.github.io/machine-learning-librarians-archivists/</a>
+<br/>
+Introduction to Machine Learning with Scikit Learn
+<a href="https://carpentries-incubator.github.io/machine-learning-novice-sklearn/">https://carpentries-incubator.github.io/machine-learning-novice-sklearn/</a>
+<br/>
+Introduction to deep-learning
+<a href="https://carpentries-incubator.github.io/deep-learning-intro/index.html">https://carpentries-incubator.github.io/deep-learning-intro/index.html</a>
+<br/>
+Logistic regression for public health
+<a href="https://carpentries-incubator.github.io/logistic-regression-public-health/index.html">https://carpentries-incubator.github.io/logistic-regression-public-health/index.html</a>
+<br/>
+Simple linear regression for public health
+<a href="https://carpentries-incubator.github.io/simple-linear-regression-public-health/">https://carpentries-incubator.github.io/simple-linear-regression-public-health/</a>
+<br/>
+Multiple linear regression for public health
+<a href="https://carpentries-incubator.github.io/multiple-linear-regression-public-health/">https://carpentries-incubator.github.io/multiple-linear-regression-public-health/</a>
+<br/>
+and possibly, Text Analysis in Python
+<a href="https://carpentries-incubator.github.io/python-text-analysis/">https://carpentries-incubator.github.io/python-text-analysis/</a>
