--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -1,63 +1,65 @@
-On Saturdays (with recaps on Mondays and Wednesdays and some additional sessions on other days)
+On Mondays<br/>
 <br/>
-Working with Data (Regular Expressions)
-<a href="https://librarycarpentry.org/lc-data-intro/">https://librarycarpentry.org/lc-data-intro/</a>
+<b>Working with Data (Regular Expressions)</b><br>
+<a href="https://librarycarpentry.org/lc-data-intro/">https://librarycarpentry.org/lc-data-intro/</a><br/>
 <br/>
-The Unix Shell
-<a href="http://swcarpentry.github.io/shell-novice">http://swcarpentry.github.io/shell-novice</a>
+<b>The Unix Shell</b><br>
+<a href="http://swcarpentry.github.io/shell-novice">http://swcarpentry.github.io/shell-novice</a><br/>
 <br/>
-Version Control with Git
-<a href="http://swcarpentry.github.io/git-novice">http://swcarpentry.github.io/git-novice</a>
+<b>Version Control with Git</b><br>
+<a href="http://swcarpentry.github.io/git-novice">http://swcarpentry.github.io/git-novice</a><br/>
 <br/>
-Programming with Python
-<a href="http://swcarpentry.github.io/python-novice-inflammation">http://swcarpentry.github.io/python-novice-inflammation</a>
+<b>Programming with Python</b><br>
+<a href="http://swcarpentry.github.io/python-novice-inflammation">http://swcarpentry.github.io/python-novice-inflammation</a><br/>
 <br/>
-Plotting and Programming in Python
-<a href="http://swcarpentry.github.io/python-novice-gapminder">http://swcarpentry.github.io/python-novice-gapminder</a>
+<b>Plotting and Programming in Python</b><br>
+<a href="http://swcarpentry.github.io/python-novice-gapminder">http://swcarpentry.github.io/python-novice-gapminder</a><br/>
 <br/>
-Text & Data Mining
-<a href="http://librarycarpentry.org/lc-tdm">http://librarycarpentry.org/lc-tdm</a>
+<b>Text & Data Mining</b><br>
+<a href="http://librarycarpentry.org/lc-tdm">http://librarycarpentry.org/lc-tdm</a><br/>
 <br/>
-<a href="Constellate - https://ithaka.github.io/tdm-notebooks/book/all-notebooks.html">Constellate - https://ithaka.github.io/tdm-notebooks/book/all-notebooks.html</a>
+<b>Constellate</b><br>
+<a href="Constellate - https://ithaka.github.io/tdm-notebooks/book/all-notebooks.html">https://ithaka.github.io/tdm-notebooks/book/all-notebooks.html</a><br/>
 <br/>
-<a href="HathiTrust Research Center Tools & Data - https://wiki.htrc.illinois.edu/display/COM/Getting+started">HathiTrust Research Center Tools & Data - https://wiki.htrc.illinois.edu/display/COM/Getting+started</a>
+<b>HathiTrust Research Center Tools & Data</b><br>
+<a href="https://wiki.htrc.illinois.edu/display/COM/Getting+started">https://wiki.htrc.illinois.edu/display/COM/Getting+started</a><br/>
 <br/>
-Introduction to web scraping
-<a href="https://ubc-library-rc.github.io/intro-web-scraping/">https://ubc-library-rc.github.io/intro-web-scraping/</a>
-<a href="https://librarycarpentry.org/lc-webscraping">https://librarycarpentry.org/lc-webscraping</a>
+<b>Introduction to web scraping</b><br>
+<a href="https://ubc-library-rc.github.io/intro-web-scraping/">https://ubc-library-rc.github.io/intro-web-scraping/</a><br/>
+<a href="https://librarycarpentry.org/lc-webscraping">https://librarycarpentry.org/lc-webscraping</a><br/>
 <br/>
-Programming with R
-<a href="http://swcarpentry.github.io/r-novice-inflammation">http://swcarpentry.github.io/r-novice-inflammation</a>
+<b>Programming with R</b><br>
+<a href="http://swcarpentry.github.io/r-novice-inflammation">http://swcarpentry.github.io/r-novice-inflammation</a><br/>
 <br/>
-R for Reproducible Scientific Analysis
-<a href="http://swcarpentry.github.io/r-novice-gapminder">http://swcarpentry.github.io/r-novice-gapminder</a>
+<b>R for Reproducible Scientific Analysis</b><br>
+<a href="http://swcarpentry.github.io/r-novice-gapminder">http://swcarpentry.github.io/r-novice-gapminder</a><br/>
 <br/>
-Intro to Conda for Data Scientists
-<a href="https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/">https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/</a>
+<b>Intro to Conda for Data Scientists</b><br>
+<a href="https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/">https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/</a><br/>
 <br/>
-Text Processing and Parallel Processing
-<a href="https://deapsecure.gitlab.io/deapsecure-lesson01-hpc/">https://deapsecure.gitlab.io/deapsecure-lesson01-hpc/</a>
+<b>Text Processing and Parallel Processing</b><br>
+<a href="https://deapsecure.gitlab.io/deapsecure-lesson01-hpc/">https://deapsecure.gitlab.io/deapsecure-lesson01-hpc/</a><br/>
 <br/>
-Parallel Programming in Python
-<a href="https://carpentries-incubator.github.io/lesson-parallel-python/">https://carpentries-incubator.github.io/lesson-parallel-python/</a>
+<b>Parallel Programming in Python</b><br>
+<a href="https://carpentries-incubator.github.io/lesson-parallel-python/">https://carpentries-incubator.github.io/lesson-parallel-python/</a><br/>
 <br/>
-Intro to AI for GLAM
-<a href="https://carpentries-incubator.github.io/machine-learning-librarians-archivists/">https://carpentries-incubator.github.io/machine-learning-librarians-archivists/</a>
+<b>Intro to AI for GLAM</b><br>
+<a href="https://carpentries-incubator.github.io/machine-learning-librarians-archivists/">https://carpentries-incubator.github.io/machine-learning-librarians-archivists/</a><br/>
 <br/>
-Introduction to Machine Learning with Scikit Learn
-<a href="https://carpentries-incubator.github.io/machine-learning-novice-sklearn/">https://carpentries-incubator.github.io/machine-learning-novice-sklearn/</a>
+<b>Introduction to Machine Learning with Scikit Learn</b><br>
+<a href="https://carpentries-incubator.github.io/machine-learning-novice-sklearn/">https://carpentries-incubator.github.io/machine-learning-novice-sklearn/</a><br/>
 <br/>
-Introduction to deep-learning
-<a href="https://carpentries-incubator.github.io/deep-learning-intro/index.html">https://carpentries-incubator.github.io/deep-learning-intro/index.html</a>
+<b>Introduction to deep-learning</b><br>
+<a href="https://carpentries-incubator.github.io/deep-learning-intro/index.html">https://carpentries-incubator.github.io/deep-learning-intro/index.html</a><br/>
 <br/>
-Logistic regression for public health
-<a href="https://carpentries-incubator.github.io/logistic-regression-public-health/index.html">https://carpentries-incubator.github.io/logistic-regression-public-health/index.html</a>
+<b>Logistic regression for public health</b><br>
+<a href="https://carpentries-incubator.github.io/logistic-regression-public-health/index.html">https://carpentries-incubator.github.io/logistic-regression-public-health/index.html</a><br/>
 <br/>
-Simple linear regression for public health
-<a href="https://carpentries-incubator.github.io/simple-linear-regression-public-health/">https://carpentries-incubator.github.io/simple-linear-regression-public-health/</a>
+<b>Simple linear regression for public health</b><br>
+<a href="https://carpentries-incubator.github.io/simple-linear-regression-public-health/">https://carpentries-incubator.github.io/simple-linear-regression-public-health/</a><br/>
 <br/>
-Multiple linear regression for public health
-<a href="https://carpentries-incubator.github.io/multiple-linear-regression-public-health/">https://carpentries-incubator.github.io/multiple-linear-regression-public-health/</a>
+<b>Multiple linear regression for public health</b><br>
+<a href="https://carpentries-incubator.github.io/multiple-linear-regression-public-health/">https://carpentries-incubator.github.io/multiple-linear-regression-public-health/</a><br/>
 <br/>
-and possibly, Text Analysis in Python
-<a href="https://carpentries-incubator.github.io/python-text-analysis/">https://carpentries-incubator.github.io/python-text-analysis/</a>
+<b>Text Analysis in Python</b><br>
+<a href="https://carpentries-incubator.github.io/python-text-analysis/">https://carpentries-incubator.github.io/python-text-analysis/</a><br/>
